Deduplicate front-end test setup and tighten its assertions
The diagnostics work left four BASIC test classes each building their own
lexer, parser and error-listener stack, and two assertions loose enough to
pass without checking what they named.

- Parser setup and line assertions live in BasicTests — the visitor error
  tests now extend the visitor test base instead of rebuilding the stack.
- Semantics tests assert on msg, not exception.message — msg is the text
  the compiler actually prints.
- The caret assertion names the caret line — contains("|") already passed
  on the quoted source line alone.
- Tiny tests join with spaces, not EOL — Tiny's lexer skips newlines, so
  the separator never affected what was parsed.
- build.md gains an unrelated gotcha — failsafe leaves stale per-class
  reports behind, so a green build can look like a failing one.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>